fixing travis pip install

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   #- "nightly"  # nightly build
 install:
   - pip install -r requirements.txt
+  - pip install --upgrade pytest
 # command to run tests
 script: 
   - pytest -q ./datapungi_fed/tests/test_driversCI.py --cmdopt=$pyTvar --maxfail=2
