--- a/datapungi_fed/config/datasetlist.yaml
+++ b/datapungi_fed/config/datasetlist.yaml
@@ -51,10 +51,9 @@
     - { short name: tags/series,  database: fred/tags/series,  json key: seriess, description: Get the series matching tags., parameters: [api_key,file_type,tag_names,exclude_tag_names,realtime_start,realtime_end,limit,offset,order_by,sort_order]}
 - api: GeoFRED
   group: Geo
-  default query: regionalseries
+  default query: series
   datasets:
     - { short name: shapes,      database: geofred/shapes/file,   json key: , description: "This request returns shape files from GeoFRED in Well-known text (WKT) format.", parameters: [api_key,file_type,shape]}
     - { short name: meta,        database: geofred/series/group,  json key: series_group, description: "This request returns the meta information needed to make requests for GeoFRED® data. Minimum and maximum date are also supplied for the data range available.", parameters: [api_key,file_type,series_id]}
     - { short name: series,      database: geofred/series/data,   json key: , description: This request returns a cross section of regional data for a specified release date. If no date is specified, the most recent data available are returned., parameters: [api_key,file_type,series_id,date,start_date]}
     - { short name: data,        database: geofred/regional/data, json key: , description: This request returns a cross section of regional data., parameters: [api_key,file_type,series_group,region_type,date,start_date,frequency,units,season,transformation,aggregation_method]}
-
