--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ requires=[
 description-file="README.md"
 classifiers = [
     "License :: OSI Approved :: MIT License",
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "Programming Language :: Python",
